bump z-index of header and fix some other stuff

--- a/src/components/DrinkItem/DrinkItem.scss
+++ b/src/components/DrinkItem/DrinkItem.scss
@@ -4,8 +4,8 @@
   margin: 0 1rem;
   border-radius: 10px;
   background: #fff;
-  max-width: 250px;
-  min-width: 250px;
+  max-width: 270px;
+  min-width: 270px;
 }
 
 .cards__container {
