--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   position: fixed;
+  z-index: 999;
 } 
 
 ul {
